fixed overflowX

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 body {
-  height: "100%";
-  width: "100%";
+  height: 100%;
+  width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
   top: 0;
   left: 0;
@@ -13,17 +14,6 @@ body {
 html {
   scroll-behavior: smooth;
   scrollbar-width: thin;
-}
-
-.mask-circle {
-  -webkit-mask-image: radial-gradient(
-    circle at center,
-    transparent 30%,
-    black 31%
-  );
-  mask-image: radial-gradient(circle at center, transparent 30%, black 31%);
-  -webkit-mask-size: 80px 80px;
-  mask-size: 80px 80px;
 }
 
 .section {
